# orcho

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  image.yml  release.yml
docker/: Dockerfile  README.md  entrypoint.sh
src/orcho/: __init__.py  _scripts.py
tests/: test_package_metadata.py  test_scripts.py
